--- a/home-manager/hyprland/hyprland.conf
+++ b/home-manager/hyprland/hyprland.conf
@@ -137,6 +137,7 @@ bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
 bind = $mainMod, O, togglespecialworkspace, obsidian
+bind = $mainMod SHIFT, O, movetoworkspace, special:obsidian
 # bind = $mainMod, tab, togglespecialworkspace, magic
 # bind = $mainMod SHIFT, tab, movetoworkspace, special:magic
 bind = $mainMod, up, moveactive, 0 -100
