--- a/home-manager/hyprland/hyprland.conf
+++ b/home-manager/hyprland/hyprland.conf
@@ -265,25 +265,25 @@ windowrulev2 = minsize 1000 500, class:Gimp*, title:Open Image
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
-layerrule = dimaround, logout_dialog
-layerrule = blur, logout_dialog
+layerrule = dim_around on, logout_dialog
+layerrule = blur on, logout_dialog
 
 
 ecosystem {
   no_update_news = true
 }
 
-plugin {
-    hyprbars {
-        # example config
-        bar_height = 30
-
-        # example buttons (R -> L)
-        # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(ff4040), 10, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(eeee11), 10, , hyprctl dispatch fullscreen 1
-
-        # cmd to run on double click of the bar
-        on_double_click = hyprctl dispatch fullscreen 1
-    }
-}
+# plugin {
+#     hyprbars {
+#         # example config
+#         bar_height = 30
+#
+#         # example buttons (R -> L)
+#         # hyprbars-button = color, size, on-click
+#         hyprbars-button = rgb(ff4040), 10, 󰖭, hyprctl dispatch killactive
+#         hyprbars-button = rgb(eeee11), 10, , hyprctl dispatch fullscreen 1
+#
+#         # cmd to run on double click of the bar
+#         on_double_click = hyprctl dispatch fullscreen 1
+#     }
+# }
