--- a/home-manager/hyprland/hyprland.conf
+++ b/home-manager/hyprland/hyprland.conf
@@ -1,3 +1,32 @@
+exec-once = /nix/store/rxzvps8zldnz4sgphbw6893n6ikai6gn-dbus-1.14.10/bin/dbus-update-activation-environment --systemd DISPLAY HYPRLAND_INSTANCE_SIGNATURE WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && systemctl --user stop hyprland-session.target && systemctl --user start hyprland-session.target
+decoration {
+  shadow {
+    color=rgba(1e1e2e99)
+  }
+}
+
+general {
+  col.active_border=rgb(89b4fa)
+  col.inactive_border=rgb(45475a)
+}
+
+group {
+  groupbar {
+    col.active=rgb(89b4fa)
+    col.inactive=rgb(45475a)
+    text_color=rgb(cdd6f4)
+  }
+  col.border_active=rgb(89b4fa)
+  col.border_inactive=rgb(45475a)
+  col.border_locked_active=rgb(94e2d5)
+}
+
+misc {
+  background_color=rgb(1e1e2e)
+  disable_hyprland_logo=true
+}
+exec-once=/nix/store/zk1i9b9bgq93yc5mwrzc9ncz39j5wavm-save-last-workspace/bin/save-last-workspace
+exec-once=[workspace special:obsidian silent] /nix/store/29c1imqnpkixkyl6a0cl2r1c9l1q1vkh-obsidian-1.10.6/bin/obsidian
 env = NIXOS_OZONE_WL, 1
 env = NIXPKGS_ALLOW_UNFREE, 1
 env = XDG_CURRENT_DESKTOP, Hyprland
@@ -109,16 +138,21 @@ input {
     }
 }
 
-# gestures {
-#   workspace_swipe = true
-# }
-
 cursor {
   inactive_timeout = 10
   sync_gsettings_theme = false
 }
 
+misc:exit_window_retains_fullscreen = true
+misc:on_focus_under_fullscreen = 1
+
+binds:allow_pin_fullscreen = true
+binds:hide_special_on_workspace_change = true
+binds:movefocus_cycles_fullscreen = true
+
 $mainMod = SUPER # Sets "Windows" key as main modifier
+
+gesture = 3, horizontal, workspace
 
 bind = $mainMod Shift, C, killactive,
 bind = $mainMod Shift, Q, exec, wlogout
@@ -138,8 +172,6 @@ bind = $mainMod, j, movefocus, d
 
 bind = $mainMod, O, togglespecialworkspace, obsidian
 bind = $mainMod SHIFT, O, movetoworkspace, special:obsidian
-# bind = $mainMod, tab, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, tab, movetoworkspace, special:magic
 bind = $mainMod, up, moveactive, 0 -100
 bind = $mainMod, down, moveactive, 0 100
 bind = $mainMod, left, moveactive, -100 0
@@ -203,7 +235,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod SHIFT, comma,  movetoworkspace, -1
 bind = $mainMod SHIFT, period, movetoworkspace, +1
-bind = $mainMod ,Tab,cyclenext
+bind = $mainMod, Tab, cyclenext
+# bind = $mainMod, Tab, fullscreen
 bind = $mainMod ,Tab,bringactivetotop
 
 bind = $mainMod, mouse_down, workspace, e+1
@@ -248,8 +281,8 @@ windowrulev2 = center, title:satty, fullscreen:1
 windowrulev2 = float, title:satty, fullscreen:1
 windowrulev2 = animation popin 90%, title:satty, fullscreen:1
 
-windowrulev2 = norounding, pinned:1
-windowrulev2 = bordersize 5, pinned:1
+windowrule = match:pin true, rounding 0
+windowrule = match:pin true, border_size 5
 
 # windowrulev2 = opacity 0.95, class:discord
 windowrulev2 = opacity 0.95, initialTitle:Spotify Premium
@@ -265,9 +298,8 @@ windowrulev2 = minsize 1000 500, class:Gimp*, title:Open Image
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
-layerrule = dim_around on, logout_dialog
-layerrule = blur on, logout_dialog
-
+# layerrule = dim_around on, logout_dialog
+# layerrule = blur on, logout_dialog
 
 ecosystem {
   no_update_news = true
