feat: remove scripts in favor of native hyprland features, add zoom

--- a/home-manager/hyprland/hyprland.conf
+++ b/home-manager/hyprland/hyprland.conf
@@ -25,6 +25,34 @@ misc {
   background_color=rgb(1e1e2e)
   disable_hyprland_logo=true
 }
+exec-once=[workspace special:obsidian silent] /nix/store/29c1imqnpkixkyl6a0cl2r1c9l1q1vkh-obsidian-1.10.6/bin/obsidian
+exec-once = /nix/store/rxzvps8zldnz4sgphbw6893n6ikai6gn-dbus-1.14.10/bin/dbus-update-activation-environment --systemd DISPLAY HYPRLAND_INSTANCE_SIGNATURE WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && systemctl --user stop hyprland-session.target && systemctl --user start hyprland-session.target
+decoration {
+  shadow {
+    color=rgba(1e1e2e99)
+  }
+}
+
+general {
+  col.active_border=rgb(89b4fa)
+  col.inactive_border=rgb(45475a)
+}
+
+group {
+  groupbar {
+    col.active=rgb(89b4fa)
+    col.inactive=rgb(45475a)
+    text_color=rgb(cdd6f4)
+  }
+  col.border_active=rgb(89b4fa)
+  col.border_inactive=rgb(45475a)
+  col.border_locked_active=rgb(94e2d5)
+}
+
+misc {
+  background_color=rgb(1e1e2e)
+  disable_hyprland_logo=true
+}
 exec-once=/nix/store/zk1i9b9bgq93yc5mwrzc9ncz39j5wavm-save-last-workspace/bin/save-last-workspace
 exec-once=[workspace special:obsidian silent] /nix/store/29c1imqnpkixkyl6a0cl2r1c9l1q1vkh-obsidian-1.10.6/bin/obsidian
 env = NIXOS_OZONE_WL, 1
@@ -154,6 +182,16 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 gesture = 3, horizontal, workspace
 
+
+binde = $mainMod, equal, exec, hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor -j | jq '.float * 1.1')
+binde = $mainMod, minus, exec, hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor -j | jq '(.float * 0.9) | if . < 1 then 1 else . end')
+
+bind = $mainMod, M, togglespecialworkspace, magic
+bind = $mainMod, M, movetoworkspace, +0
+bind = $mainMod, M, togglespecialworkspace, magic
+bind = $mainMod, M, movetoworkspace, special:magic
+bind = $mainMod, M, togglespecialworkspace, magic
+
 bind = $mainMod Shift, C, killactive,
 bind = $mainMod Shift, Q, exec, wlogout
 bind = ,XF86PowerOff, exec, wlogout
@@ -219,9 +257,7 @@ bind = $mainMod, 0, workspace, 10
 bind = $mainMod, 0, exec, hyprctl hyprpaper wallpaper ",~/.config/hypr/gybe-bg.png"
 bind = $mainMod, comma, workspace, -1
 bind = $mainMod, period, workspace, +1
-bind = $mainMod CTRL, comma, exec, "$XDG_CONFIG_HOME/hypr/scripts/move-to-workspace.sh" -
-bind = $mainMod CTRL, period, exec, "$XDG_CONFIG_HOME/hypr/scripts/move-to-workspace.sh" +
-bind = $mainMod, grave, exec, hyprctl dispatch workspace $(cat $XDG_RUNTIME_DIR/hypr/$HYPRLAND_INSTANCE_SIGNATURE/.last-workspace)
+bind = $mainMod, grave, workspace, previous
 
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
@@ -236,7 +272,6 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod SHIFT, comma,  movetoworkspace, -1
 bind = $mainMod SHIFT, period, movetoworkspace, +1
 bind = $mainMod, Tab, cyclenext
-# bind = $mainMod, Tab, fullscreen
 bind = $mainMod ,Tab,bringactivetotop
 
 bind = $mainMod, mouse_down, workspace, e+1
@@ -246,8 +281,8 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = $mainMod, up, exec, playerctl play-pause
-bind = $mainMod , left, exec, playerctl 5-
-bind = $mainMod , right, exec, playerctl 5+
+bind = $mainMod, left, exec, playerctl 5-
+bind = $mainMod, right, exec, playerctl 5+
 bind = $mainMod SHIFT, left, exec, playerctl previous
 bind = $mainMod SHIFT, right, exec, playerctl next
 
@@ -300,6 +335,9 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 # layerrule = dim_around on, logout_dialog
 # layerrule = blur on, logout_dialog
+
+misc:enable_anr_dialog = false
+binds:workspace_back_and_forth = true
 
 ecosystem {
   no_update_news = true
